force-app/main/default/objects/Registration__c/Registration__c.object-meta.xml
<CustomObject>
    <description>Registration Info</description>
    <label>Registration</label>
    <nameField>
        <label>Registration</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Registration</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>