force-app/main/default/objects/Registration__c/fields/Facilities__c.field-meta.xml
<CustomField>
    <fullName>Facilities__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Facilities</label>
    <referenceTo>Facilities__c</referenceTo>
    <relationshipLabel>Registration</relationshipLabel>
    <relationshipName>Registration</relationshipName>
    <type>Lookup</type>
</CustomField>