force-app/main/default/objects/Registration__c/fields/Registration_Name__c.field-meta.xml
<CustomField>
    <fullName>Registration_Name__c</fullName>
    <label>Registration Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>