force-app/main/default/objects/Registration__c/fields/Service_Request__c.field-meta.xml
<CustomField>
    <fullName>Service_Request__c</fullName>
    <label>Service Request</label>
    <length>255</length>
    <type>Text</type>
</CustomField>