force-app/main/default/objects/Registration__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Registration_Name__c</columns>
    <columns>Equipment__c</columns>
    <columns>Service_Request__c</columns>
    <columns>Status__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Description__c</columns>
    <columns>Priority__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>